--- a/Modelio/Cas d utilisation/project.conf
+++ b/Modelio/Cas d utilisation/project.conf
@@ -5,12 +5,6 @@
     <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
     <properties></properties>
   </fragment>
-  <module name="ModelerModule" version="9.3.00" scope="LOCAL" uri="">
-    <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
-    <properties>
-      <prop name="isActive" value="true" scope="LOCAL"/>
-    </properties>
-  </module>
   <fragment type="RAMC" id="PredefinedTypes 3.9.00" version="3.9.00" scope="LOCAL" uri="file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/305/0/.cp/res/PredefinedTypes.ramc">
     <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
     <properties>
@@ -18,6 +12,13 @@
       <prop name="FragmentVersion" value="3.9.00" scope="LOCAL"/>
     </properties>
   </fragment>
+  <module name="ModelerModule" version="9.3.00" scope="LOCAL" uri="">
+    <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
+    <properties>
+      <prop name="isActive" value="true" scope="LOCAL"/>
+      <prop name="isSelectDone" value="true" scope="LOCAL"/>
+    </properties>
+  </module>
   <properties>
     <prop name="info.description" value="" scope="LOCAL"/>
     <prop name="org.modelio.platform.project/ProjectPrefs.AttDefType" scope="LOCAL">'string' {00000004-0000-000d-0000-000000000000} Standard.DataType</prop>
