Update diagramme classe

--- a/Modelio/Digramme de classe/project.conf
+++ b/Modelio/Digramme de classe/project.conf
@@ -64,6 +64,8 @@
       <prop name="RunParameters" value="" scope="LOCAL"/>
       <prop name="UseExternalEdition" value="false" scope="LOCAL"/>
       <prop name="UseJavah" value="true" scope="LOCAL"/>
+      <prop name="isActive" value="true" scope="LOCAL"/>
+      <prop name="isSelectDone" value="true" scope="LOCAL"/>
     </properties>
   </module>
   <properties>
