--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Modelio/Cas d utilisation/.runtime/.save
 
 Modelio/Digramme de classe/.runtime/
 wkQuiz/ihm-quizz/build.fxbuild
+Modelio/Digramme de classe/project.conf
