Tout les fichier de Modelio, le retour !

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,5 @@ bin/
 .settings/
 .classpath
 .project
-Modelio/Cas d utilisation/.runtime/
 
-Modelio/Digramme de classe/.runtime/
+wkQuiz/ihm-quizz/build.fxbuild
