--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ Modelio/Digramme de classe/.runtime/
 
 #sonarLint
 .sonarlint/
+
+# Fichier de serialisation
+wkQuiz/ihm-quizz/donneesCategorie
+wkQuiz/ihm-quizz/donneesQuestion
