Création de l'EXE

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ Modelio/Digramme de classe/.runtime/
 # Fichier de serialisation
 wkQuiz/ihm-quizz/donneesCategorie
 wkQuiz/ihm-quizz/donneesQuestion
+
+CreationExe/
